# role-tracker-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
docs/: HANDBOOK.md  PLAN.md  agentic_ai_tutorial.md  api_spec.md  aws-deployment-plan.md  aws-onboarding.md  cicd-setup.md  cover-letter-interactive-plan.md  cover_letter_dialog_plan.md  demo_prep.md  docker-setup.md  multi_user.md  operations.md  phase5_web_app_plan.md  plan_search_first_home.md  project_state.md
docs/wireframes/: README.md  design_system.md  job_detail_mockup.html  job_list_mockup.html  settings_mockup.html
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
infra/: 00-vars.sh  01-ecr.sh  02-s3.sh  03-dynamodb.sh  04-ssm.sh  05-iam.sh  06-ec2.sh  07-deploy.sh  08-github-oidc.sh
infra/users/: manage_users.py
scripts/: migrate_publishers_to_global.py  prototype_agent.py  prototype_letter.py  run_api.py  run_fetch.py  run_match.py
src/role_tracker/: __init__.py  config.py
tests/: test_smoke.py
tests/api/: conftest.py  test_cover_letter_analysis.py  test_cover_letter_draft_finalize.py  test_cover_letter_summary.py  test_health.py  test_jobs.py  test_letters.py  test_middleware.py  test_profile.py  test_queries.py  test_resume.py  test_usage.py
tests/applied/: test_store.py
tests/aws/: conftest.py  test_dynamodb_applied_store.py  test_dynamodb_jobs_cache.py  test_dynamodb_letter_store.py  test_dynamodb_query_store.py  test_dynamodb_seen_jobs_store.py  test_dynamodb_usage_store.py  test_dynamodb_user_profile_store.py  test_manage_users.py  test_s3_resume_store.py  test_ssm_secrets.py
tests/cover_letter/: test_agent.py  test_critique.py  test_generator.py  test_interactive_analyze.py  test_interactive_draft.py  test_interactive_summary.py  test_refine.py  (+3 more)
users/: smrah.yaml
(+174 files in other folders)
